--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "sequelize-cli": "^3.0.0"
   },
   "dependencies": {
+    "ansi-styles": "^3.2.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "locate-path": "^2.0.0",
+    "pg": "^7.3.0",
+    "sequelize": "^4.13.5",
+    "supports-color": "^4.4.0"
   }
 }
