--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
+    "http": "0.0.0",
     "locate-path": "^2.0.0",
     "pg": "^7.3.0",
     "request": "^2.83.0",
     "sequelize": "^4.13.5",
-    "supports-color": "^4.4.0"
+    "socket.io": "^2.0.3",
+    "supports-color": "^4.4.0",
+    "websocket": "^1.0.24"
   }
 }
